# local-llm-optimizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  benchmark3.py  pyproject.toml
archive/: analyzer.py  benchmark.py  benchmark5.py  monitor.py
doctor/: __init__.py  __main__.py  cli.py
doctor/advisor/: __init__.py  base.py  deterministic.py
doctor/backends/: base.py  lmstudio.py  ollama.py  openai_compatible.py  text.py
doctor/collectors/: base.py  cpu.py  memory.py  nvidia.py
doctor/compare/: __init__.py  engine.py  loader.py  reporter.py
doctor/core/: config.py  monitor.py  pipeline.py  registry.py  storage.py
doctor/diagnosis/: engine.py  scoring.py
doctor/estimate/: __init__.py  model.py  reporter.py
doctor/hardware/: __init__.py  profile.py  reporter.py
doctor/locales/: __init__.py  en.json  tr.json
doctor/reporters/: markdown.py  terminal.py
tests/fixtures/: gpu_idle_metrics.json  ram_pressure_metrics.json  sample_run.json
tests/integration/: test_compare_cli.py  test_estimate_cli.py  test_hardware_cli.py  test_pipeline_mock_backend.py
tests/unit/: test_advisor_deterministic.py  test_backends.py  test_compare.py  test_config.py  test_diagnosis_engine.py  test_estimate.py  test_hardware.py  test_registry.py  test_scoring.py
