[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-optimizer"
version = "0.6.0"
description = "Local LLM optimizer for Ollama, LM Studio, and OpenAI-compatible workloads."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
llmopt = "doctor.cli:main"

[tool.setuptools.packages.find]
include = ["doctor*"]

[tool.setuptools.package-data]
doctor = ["locales/*.json"]
